* Bug fix: fixed checkpermission import under folder_listing.pt
  [ghicaale]
* Feature: timeout dialog will appear after 15 minutes if the document is not saved.
  [ghicaale refs #20389]
* Change: removed state "closed" from the list of states marked with "draft" background
  [ghicaale refs #20490]
* Feature: added "draft" watermark for all non-final-published states
  [ghicaale refs #18538]

10.1 - (2014-07-16)
-------------------
* Feature: show inactive content in folder_listing if user
  has 'Access inactive portal content' permission.
  [ghicaale refs #17865]

10.0 - (2014-07-15)
-------------------
* Feature: allow editor to exclude page parts from PDF generation via
  a special style in tinymce.
  Upgrade step:	Plone >	Site setup > TinyMCE >
  In styles add line "Exclude from PDF|span|excludeFromPDF"
  [demarant #20255]
* Bug fix: fixed icons placement for icons of soer2015 section navigation
  [ichimdav refs #19875]
* Bug fix: Hide QR Box viewlet by default also in print mode.
  [voineali refs #20267]

9.9 - (2014-06-30)
------------------
* Change: made diff tool more clear to authors by hiding tags diffs.
  [demarant #17702]
* Change: removed important declaration for print.css for content making it
  easier to have different width containers
  [ichimdav refs #19880]
* Change: Copied check_id.py and check_id.py.metadata from eea.soercontent
  in order to fix permissions
  [voineali refs #20010]

9.8 - (2014-06-10)
------------------
* Feature: Added QR Box viewlet at the bottom of the content. Right now it's
  hidden from CSS and it can be enabled via custom CSS rules
  [voineali refs #19959]
* Change: removed short_colophon login since multimedia_view is no longer applied
  on site and the pdf output was complaining about getLayout call when using the
  main_template macros
  [ichimdav refs #19880]

9.7 - (2014-06-06)
------------------
* Feature: added eea-accordion-title-manual-icons class to the accordion logic